<resources>
    <string name="app_name">MyCriptoApp</string>
    <string name="last_update_time">Время последнего обновления: %s</string>
    <string name="symbols_template">%s / %s</string>
    <string name="min_per_day">Минимум за день:</string>
    <string name="price">Цена</string>
    <string name="max_per_day">Максимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="updated">Обновлено:</string>
    <string name="slash">/</string>
</resources>