<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="price"
            type="String" />

        <variable
            name="minDay"
            type="String" />

        <variable
            name="maxDay"
            type="String" />

        <variable
            name="lastDeal"
            type="String" />

        <variable
            name="lastUpdate"
            type="String" />

        <variable
            name="fSymbol"
            type="String" />

        <variable
            name="toSymbol"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        tools:context=".CoinDetailActivity">

        <ImageView
            android:id="@+id/ivLogoCoin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvFromSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@android:color/holo_purple"
            android:textSize="24sp"
            android:text="@{fSymbol}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoCoin"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvFromSymbol"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoCoin"
            android:text="@string/slash" />

        <TextView
            android:id="@+id/tvToSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:text="@{toSymbol}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvSlash"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoCoin"
            tools:text="USD" />

        <TextView
            android:id="@+id/tvPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFromSymbol" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@{price}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
            app:layout_constraintTop_toTopOf="@+id/tvPriceLabel"
            tools:text="457235.144" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#63000000"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvMinPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/min_per_day"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <TextView
            android:id="@+id/tvMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:text="@{minDay}"
            app:layout_constraintStart_toEndOf="@+id/tvMinPriceLabel"
            app:layout_constraintTop_toTopOf="@+id/tvMinPriceLabel"
            tools:text="7256.02" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#63000000"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPrice"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvMaxPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/max_per_day"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPrice" />

        <TextView
            android:id="@+id/tvMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            android:text="@{maxDay}"
            app:layout_constraintStart_toEndOf="@+id/tvMaxPriceLabel"
            app:layout_constraintTop_toTopOf="@+id/tvMaxPriceLabel"
            tools:text="7256.02" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#63000000"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxPrice"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvLastDealLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/last_deal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxPrice" />

        <TextView
            android:id="@+id/tvLastDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@{lastDeal}"
            app:layout_constraintStart_toEndOf="@+id/tvLastDealLabel"
            app:layout_constraintTop_toTopOf="@+id/tvLastDealLabel"
            tools:text="Bitfinex" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#63000000"
            app:layout_constraintTop_toBottomOf="@+id/tvLastDeal"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvUpdatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/updated"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastDealLabel" />

        <TextView
            android:id="@+id/tvUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@{lastUpdate}"
            app:layout_constraintStart_toEndOf="@+id/tvUpdatedLabel"
            app:layout_constraintTop_toTopOf="@+id/tvUpdatedLabel"
            tools:text="21:05:02" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>